--- a/us-network/config.json
+++ b/us-network/config.json
@@ -14,8 +14,8 @@
   },
   "legend": {
     "edgeLabel": "Relationship between asylum seeker and actors of implementation.",
-    "colorLabel": "For nodes, colour represents the difference in ego and alter. For edges, colours represent direct and indirect relationships between actors.",
-    "nodeLabel": "Actors involved in either seeking asylum, or implementing asylum system at US Southern land border"
+    "colorLabel": "Node colour represents the difference in ego and alter. Edge colour represents a direct or indirect relationship between actors.",
+    "nodeLabel": "Actors involved in either seeking asylum, or implementing asylum system at US southern land border"
   },
   "features": {
     "search": true,
@@ -28,22 +28,22 @@
   },
   "sigma": {
     "drawingProperties": {
-      "defaultEdgeType": "curve",
+      "defaultEdgeType": "line",
       "defaultHoverLabelBGColor": "#002147",
       "defaultLabelBGColor": "#ddd",
       "activeFontStyle": "bold",
       "defaultLabelColor": "#000",
-      "labelThreshold": 10,
+      "labelThreshold": 1,
       "defaultLabelHoverColor": "#fff",
       "fontStyle": "bold",
       "hoverFontStyle": "bold",
       "defaultLabelSize": 14
     },
     "graphProperties": {
-      "maxEdgeSize": 0.5,
-      "minEdgeSize": 0.2,
-      "minNodeSize": 1,
-      "maxNodeSize": 7
+      "maxEdgeSize": 2,
+      "minEdgeSize": 1,
+      "minNodeSize": 4,
+      "maxNodeSize": 4
     },
     "mouseProperties": {
       "maxRatio": 20,
