--- a/network/config.json
+++ b/network/config.json
@@ -3,7 +3,7 @@
   "version": "1.0",
   "data": "data.json",
   "logo": {
-    "file": <img src="WWU_MakeWaves_Stacked_RGB_0.png"/>,
+    "file": "WWU_MakeWaves_Stacked_RGB_0.png",
     "link": "https://fairhaven.wwu.edu/jefferr6",
     "text": "Regina Jefferies"
   },
