--- a/us-network/config.json
+++ b/us-network/config.json
@@ -8,9 +8,9 @@
     "text": "Regina Jefferies"
   },
   "text": {
-    "more": "Social network visualisations of the connections between an individual seeking asylum at the US and Mexico land border and the state actors involved in implementing the obligation of non-refoulement with whom they might come into direct or indirect contact. These networks use empirical data to map a representative sample of six different ego-centric networks, derived from fifteen different possible legal categorisations of people seeking asylum at the land border between the US and Mexico. Egos appear as yellow, circular nodes. Alters appear as blue, circular nodes. Indirect ties between egos and alters are represented by pink lines. Direct ties between egos and alters are represented as teal lines.",
-    "intro": "Social network visualisations of the connections between an individual seeking asylum at the US and Mexico land border and the state actors involved in implementing the obligation of non-refoulement with whom they might come into direct or indirect contact.  ",
-    "title": "Social Network of Actors Involved in the Implementation of the Norm of Non-Refoulement in the United States "
+    "more": "Asylum-Bureaucratic Complex comprised of the connections between an individual seeking asylum at the US and Mexico land border and the state actors involved in implementing the obligation of non-refoulement with whom they might come into direct or indirect contact. These networks use empirical data to map a representative sample of six different ego-centric networks, derived from fifteen different possible legal categorisations of people seeking asylum at the land border between the US and Mexico. Egos appear as yellow, circular nodes. Alters appear as blue, circular nodes. Indirect ties between egos and alters are represented by pink lines. Direct ties between egos and alters are represented as teal lines.",
+    "intro": "Asylum-Bureaucratic Complex comprised of the connections between an individual seeking asylum at the US and Mexico land border and the state actors involved in implementing the obligation of non-refoulement with whom they might come into direct or indirect contact.  ",
+    "title": "Asylum-Bureaucratic Complex of Actors Involved in the Implementation of the Norm of Non-Refoulement in the United States "
   },
   "legend": {
     "edgeLabel": "Relationship between asylum seeker and actors of implementation.",
