--- a/australia-network/config.json
+++ b/australia-network/config.json
@@ -8,14 +8,14 @@
     "text": "Regina Jefferies"
   },
   "text": {
-    "more": "Asylum Bureaucratic Complex comprised of the connections between an individual seeking asylum at Australian airports and the state actors involved in implementing the norm of non-refoulement with whom they might come into direct or indirect contact. These networks use empirical data to map a representative sample of six different ego-centric networks, derived from fifteen different possible legal categorisations of people seeking asylum at Australian airports. Egos appear as yellow, circular nodes. Alters appear as blue, circular nodes. Indirect ties between egos and alters are represented by pink lines. Direct ties between egos and alters are represented as teal lines.",
-    "intro": "Asylum Bureaucratic Complex comprised of the connections between an individual seeking asylum at Australian airports and the state actors involved in implementing the norm of non-refoulement with whom they might come into direct or indirect contact.  ",
-    "title": "Asylum Bureaucratic Complex: Network of Actors Involved in Implementing the Norm of Non-Refoulement in Australia"
+    "more": "Social network visualisation of the connections between an asylum seeker at an Australian airport and the actors involved in implementing the norm of non-refoulement with whom they might come into direct or indirect contact. These networks use empirical data to map a representative sample of six different ego-centric networks, derived from fifteen different possible legal categorisations of people seeking asylum at Australian airports. Asylum seekers (egos) appear as yellow, circular nodes. Actors (alters) appear as blue, circular nodes. Indirect ties between asylum seekers and actors are represented by pink lines. Direct ties between asylum seekers and actors are represented as teal lines.",
+    "intro": "Social network visualisation of the connections between an asylum seeker at an Australian airport and the actors involved in implementing the norm of non-refoulement with whom they might come into direct or indirect contact.",
+    "title": "Social Network of Actors Involved in Implementing the Norm of Non-Refoulement in Australia"
   },
   "legend": {
-    "edgeLabel": "Relationship between asylum seeker and actors of implementation.",
-    "colorLabel": "For nodes, colour represents the difference in ego and alter. For edges, colours represent direct and indirect relationships between actors.",
-    "nodeLabel": "Actors involved in either seeking asylum, or implementing asylum framework at Australian airports"
+    "edgeLabel": "Relationship between asylum seeker and implementing actors.",
+    "colorLabel": "For nodes, colour represents the difference in asylum seeker (ego) and actor (alter). For edges, colours represent direct and indirect relationships between asylum seekers and actors.",
+    "nodeLabel": "Asylum seekers and implementing actors involved in the asylum framework at Australian airports"
   },
   "features": {
     "search": true,
