--- a/us-network/config.json
+++ b/us-network/config.json
@@ -4,7 +4,7 @@
   "data": "data.json",
   "logo": {
     "file": "",
-    "link": "",
+    "link": "https://www.unsw.edu.au/content/dam/images/graphics/logos/unsw/unsw_0.png",
     "text": "Regina Jefferies"
   },
   "text": {
